# basic_jqr

./: README.md
chat_server/: .gitignore
chat_server/Documentation/: Design.txt
chat_server/Src/: Makefile  accounts.txt  client.py
chat_server/Src/Includes/: chat.h  file_lib.h  my_ht.h  netlib.h  pool_queue.h
chat_server/Src/Src/: chat.c  file_lib.c  my_ht.c  netlib.c  pool_queue.c  server.c
data_structures/circle/: .gitignore  Makefile  circle_drive  circle_drive.c  circle_link.c  circle_link.h
data_structures/graph/: Makefile  dijkstra.c  dijkstra.h  driver  driver.c  graph.c  graph.h  pqueue.c  pqueue.h
data_structures/stack/: Makefile  driver  driver.c  stack.c  stack.h
data_structures/tree/: Makefile  avl.c  avl.h  driver.c
exercises/C/3.1.16/: README.md
exercises/C/3.1.20/: .gitignore  .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/3.1.21/: .gitignore  (+3 more)
exercises/C/3.1.22/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/3.1.22/include/: game.h
exercises/C/3.1.22/src/: game.c  main.c
exercises/C/3.1.22/src/pong/: README.md  pong.c  valignore
exercises/C/3.1.22/tests/: game_test.c  game_test.h  main_tests.c
exercises/C/3.6.2/: .junit-expected.yaml  CMakeLists.txt  README.md
exercises/C/3.6.2/include/: fixme_pls.h
exercises/C/3.6.2/src/: fixme_pls.c
exercises/C/3.6.2/tests/: main_tests.c  secure_test.c  secure_test.h
exercises/C/3.8/: .junit-expected.yaml  CMakeLists.txt  README.adoc  protocol.adoc
exercises/C/3.8/include/: serialize.h
exercises/C/3.8/src/: serialize.c
exercises/C/3.8/tests/: edge_cases.c  edge_cases.h  general_tests.c  general_tests.h  helper_functions.c  helper_functions.h  main_tests.c  partial_write_tests.c  partial_write_tests.h
file_lib/: Makefile  design.txt  driver.c  file_lib.c  file_lib.h
hash_table/: my_ht.c
jqr_stuff/: 4_1_21.c  4_1_22.c  args  args.c  conditionals.c  data_types.c  env  funcs.c  pointers.c  pre
jqr_stuff/BSLE/: Makefile
jqr_stuff/Python/: 4_2_10.py  4_2_2.py  4_2_3.py  4_2_4.py  4_2_5.py  4_2_6.py  4_2_9.txt  sample.txt  tcp_client.py  tcp_server.py  udp_client.py  udp_server.py
jqr_stuff/ftp/: .gitignore  accounts.txt  design.txt  file_lib.c  file_lib.h  my_ht.c  netlib.c  netlib.h  pool_queue.c  pool_queue.h  server.c  server.h  server_drive.c  thpool.c  thpool.h
jqr_stuff/threads/: thqueue.c  thqueue.h  threads.c
netlib/: .gitignore  Makefile  client.c  netlib.c  netlib.h  server.c
pqueue/: Makefile  driver.c  pqueue.c  pqueue.h
(+111 files in other folders)
